simple/test/features/errors/semantic/e1049_cannot_call_non_function.spl
# E1049: Cannot Call Non-Function

Feature: E1049 - Cannot Call Non-Function Type
  As a Simple compiler
  I want to detect calls to non-function types
  So that expressions are callable

  Background:
    Given I have the Simple compiler

  Scenario: Calling variable of wrong type
    When I compile:
      '''
      fn test():
        val x: str = "hello"
        x(10)  # Error: string not callable
      '''
    Then I should see error E1049 at line 3
    And the error message should be "cannot call non-function type `{type}`"
    And the label should indicate "not callable"
    And the help should suggest "ensure the expression is a function or closure"

  Scenario: Valid call
    When I compile:
      '''
      fn test():
        val f: fn(i32) -> i32 = \x: x * 2
        val result = f(5)  # OK
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        val s = "test"
        s()
      '''
    Then I should see error E1049
    And the error message should contain "비함수 타입 호출 불가"
